cursus/Outer_Core/IOT/p2/confs/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard 
  namespace: kube-system 
spec:
  type: ClusterIP
  ports:
  - name: traefik-api
    port: 8080 
    targetPort: 8080 
    protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
