cursus/Outer_Core/IOT/p2/confs/default-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ingress
  namespace: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  defaultBackend:
    service:
      name: hello-kubernetes-app3
      port:
        number: 80
