cursus/Outer_Core/IOT/p2/confs/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-routing-ingress
  namespace: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app1.com 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-app1
            port:
              number: 80 
  - host: app2.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-app2
            port:
              number: 80
  # defaultBackend:
  #   service:
  #     name: hello-kubernetes-app3
  #     port:
  #       number: 80
