cursus/Outer_Core/IOT/p2/confs/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.192.168.56.110.nip.io # http://traefik.192.168.56.110.nip.io/dashboard/
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: traefik-dashboard 
            port:
              number: 8080
